# panquel-app

./: .gitignore  README.md  iniciador  package-lock.json  package.json
backend/: backup.json  error_log.txt  run_backend.py
backend/backend/: settings.py  urls.py
backend/ordenes/: admin.py  apps.py  models.py  urls.py  views.py
backend/ordenes/migrations/: 0001_initial.py  0002_alter_producto_cantidad.py  0002_auto_20260406_1132.py
mi-frontend/: package-lock.json  package.json
mi-frontend/src/: App.jsx  main.jsx
mi-frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
mi-frontend/src-tauri/capabilities/: default.json
mi-frontend/src-tauri/icons/: icon.icns
mi-frontend/src-tauri/src/: main.rs
mi-frontend/src/img/: panquerescal.html
mi-frontend/src/img/panquerescal_files/: 899.bundle-22723cbd.js.descarga  926.bundle-22723cbd.js.descarga  anchor.html  api.js.descarga  bframe.html  client  css2  partytown-sandbox-sw.html  recaptcha__es.js.descarga
mi-frontend/src/pages/: AdminPerfiles.jsx  Historial.jsx  Login.jsx  NuevaOrden.jsx  Productos.jsx  Proveedores.jsx  Sidebar.jsx  UltimaOrden.jsx
mi-frontend/src/styles/: AdminPerfiles.css  App.css  Historial.css  Login.css  NuevaOrden.css  Productos.css  Proveedores.css  Sidebar.css  UltimaOrden.css  index.css  layout.css  theme.css
mi-frontend/src/utils/: pdf.js
pruebas/: MODELO_NARX.ipynb  Panquel_Dataset_V2.csv
