[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# 1. Subimos también el tauri-build
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# 2. La versión estrella
tauri = { version = "2.10.0", features = [] } 
tauri-plugin-log = "2"
# 3. El plugin que necesitamos para Django
tauri-plugin-shell = "2"
tauri-plugin-http = "2.5.7"
